Name:           debian-repo
Version:        5.74.1
License:        BSD3
License-File:	debian/copyright
Author:         David Fox
Category:	System
Maintainer:     david@seereason.com
Homepage:       https://github.com/ddssff/debian-repo
Build-Type:	Simple
Synopsis:       Modules for working with Debian repositories
Description:
  This library includes modules covering the management of Debian
  package repositories, local caches of remote debian repositories,
  and Debian build environments.
Cabal-version:  >= 1.9
Data-Files:
        demos/Versions.hs debian/changelog
        debian/compat debian/control debian/copyright
        debian/rules

flag local-cabal-debian
  Description: Link directly to the source of the cabal-debian library
  Default: False
  Manual: True

flag local-debian
  Description: Link directly to the source of the debian library
  Default: False
  Manual: True

flag local-filemanip-extra
  Description: Link directly to the source of the filemanip-extra library
  Default: True
  Manual: True

flag no-verbosity-control
  Description: Disable the code that makes process execution less verbose
  Default: False
  Manual: True

flag fixed-verbosity-level
  Description: Disable the code that allows the verbosity level to change during execution
  Default: True
  Manual: True

flag listlike
  Description: Use process-listlike package instead of process-extras
  Default: False

Library
  Buildable: True
  Hs-Source-Dirs: .
  ghc-options: -O2 -threaded -Wall

  if flag(no-verbosity-control)
    cpp-options: -DNO_VERBOSITY_CONTROL

  if flag(fixed-verbosity-level)
    cpp-options: -DFIXED_VERBOSITY_LEVEL

  Build-Depends:
        applicative-extras,
        base,
        bytestring,
        bzlib,
        Cabal,
        containers,
        deepseq,
        directory,
        exceptions >= 0.6,
        filepath,
        HaXml,
        lens,
        ListLike >= 4,
        MIME,
        mtl,
        network-uri,
        old-locale,
        old-time,
        parsec >= 3,
        prettyclass,
        process,
        pureMD5,
        regex-compat,
        regex-tdfa,
        syb,
        template-haskell,
        text,
        time,
        transformers,
        transformers-compat,
        unix,
        Unixutils >= 1.52.3,
        utf8-string,
        zlib
  Exposed-modules:
        Debian.Releases,
        Debian.Repo,
        Debian.Repo.AptImage,
        Debian.Repo.Changes,
        Debian.Repo.Dependencies,
        Debian.Repo.EnvPath,
        Debian.Repo.Internal.Apt,
        Debian.Repo.Internal.IO,
        Debian.Repo.Internal.Repos,
        Debian.Repo.Fingerprint,
        Debian.Repo.LocalRepository,
        Debian.Repo.MonadOS,
        Debian.Repo.OSImage,
        Debian.Repo.Package,
        Debian.Repo.PackageID,
        Debian.Repo.PackageIndex,
        Debian.Repo.Prelude,
        Debian.Repo.Prelude.Bool,
        Debian.Repo.Prelude.GPGSign,
        Debian.Repo.Prelude.List,
        Debian.Repo.Prelude.Lock,
        Debian.Repo.Prelude.Misc,
        Debian.Repo.Prelude.Process,
        Debian.Repo.Prelude.SSH,
        Debian.Repo.Prelude.Time,
        Debian.Repo.Prelude.Verbosity,
        Debian.Repo.Release,
        Debian.Repo.RemoteRepository,
        Debian.Repo.Repo,
        Debian.Repo.Rsync,
        Debian.Repo.Slice,
        Debian.Repo.SourceTree,
        Debian.Repo.State.AptImage,
        Debian.Repo.State.OSImage,
        Debian.Repo.State.Package,
        Debian.Repo.State.PackageIndex,
        Debian.Repo.State.Release,
        Debian.Repo.State.Repository,
        Debian.Repo.State.Slice,
        Debian.Repo.Top,
        Debian.VersionPolicy

  if !flag (local-cabal-debian)
    Build-Depends: cabal-debian >= 4.24
  else
    Hs-Source-Dirs: ../cabal-debian/src, ../cabal-debian/dist/build/autogen
    Build-Depends: hsemail, memoize, Diff, pretty, data-default, set-extra, lens
    Exposed-Modules:
      Debian.GHC
      Debian.Policy
      Distribution.Version.Invert
      Debian.Debianize
      Debian.Debianize.BasicInfo
      Debian.Debianize.BinaryDebDescription
      Debian.Debianize.BuildDependencies
      Debian.Debianize.Bundled
      Debian.Debianize.CabalInfo
      Debian.Debianize.Changelog
      Debian.Debianize.CopyrightDescription
      Debian.Debianize.DebianName
      Debian.Debianize.DebInfo
      Debian.Debianize.Details
      Debian.Debianize.Files
      Debian.Debianize.Finalize
      Debian.Debianize.Goodies
      Debian.Debianize.InputCabal
      Debian.Debianize.InputDebian
      Debian.Debianize.Interspersed
      Debian.Debianize.Monad
      Debian.Debianize.Options
      Debian.Debianize.Output
      Debian.Debianize.Prelude
      Debian.Debianize.SourceDebDescription
      Debian.Debianize.VersionSplits
      OldLens
      Paths_cabal_debian
    Other-Modules:
      Debian.Orphans

    -- cpp-options: -DMIN_VERSION_Cabal(a,b,c)=1
    -- ghc-options: -package Cabal-1.21.1.0

  if !flag (local-debian)
    Build-Depends: debian >= 3.87
  else
    Hs-Source-Dirs: ../debian-haskell
    Build-Depends: pretty, process-extras, network
    Exposed-Modules:
      Debian.Apt.Dependencies,
      Debian.Apt.Index,
      Debian.Apt.Methods,
      Debian.Apt.Package,
      Debian.Arch,
      Debian.Changes,
      Debian.Control,
      Debian.Control.Common,
      Debian.Control.ByteString,
      Debian.Control.Policy,
      Debian.Control.String,
      Debian.Control.Text,
      Debian.Deb,
      Debian.Extra.Files,
      Debian.GenBuildDeps,
      Debian.Loc,
      Debian.Pretty,
      Debian.Relation,
      Debian.Relation.ByteString,
      Debian.Relation.Common,
      Debian.Relation.String,
      Debian.Relation.Text,
      Debian.Release,
      Debian.Sources,
      Debian.Version,
      Debian.Version.ByteString,
      Debian.Version.Common,
      Debian.Version.String,
      Debian.Version.Text,
      Debian.Report,
      Debian.Time,
      Debian.URI,
      Debian.UTF8,
      Debian.Util.FakeChanges
    Other-Modules:
      Debian.Version.Internal
  if flag(listlike)
    Build-Depends: process-listlike >= 1.0
  else
    Build-Depends: process-extras >= 0.2.0

  if flag(local-filemanip-extra)
    Hs-Source-Dirs: ../filemanip-extra
    Exposed-Modules:
      System.FilePath.Extra
      System.FilePath.Extra2
      System.FilePath.Extra3
      System.FilePath.Extra4
  else
    Build-Depends: filemanip-extra

Executable debian-versions
  Hs-Source-Dirs: demos
  Build-Depends: base, mtl, debian-repo
  Buildable: True
  Main-is: Versions.hs
  ghc-options: -O2 -threaded -Wall
  if !flag(local-debian)
    Build-Depends: debian >= 3.87

Executable newdist
  Hs-Source-Dirs: Debian/NewDist
  Build-Depends: base, debian-repo, containers, directory, filepath, MIME, mtl, regex-compat, template-haskell, text
  Buildable: True
  Main-is: Main.hs
  ghc-options: -O2 -threaded -Wall -rtsopts
  if !flag(local-debian)
    Build-Depends: debian >= 3.87
