Name:           debian-repo
Version:        5.77.3
License:        BSD3
License-File:	debian/copyright
Author:         David Fox
Category:	System
Maintainer:     david@seereason.com
Homepage:       https://github.com/ddssff/debian-repo
Build-Type:	Simple
Synopsis:       Modules for working with Debian repositories
Description:
  This library includes modules covering the management of Debian
  package repositories, local caches of remote debian repositories,
  and Debian build environments.
Cabal-version:  >= 1.9
Data-Files:
        demos/Versions.hs debian/changelog
        debian/compat debian/control debian/copyright
        debian/rules

flag local-libraries
  Description: Link directly to the source of the cabal-debian and debian libraries
  Default: True
  Manual: True

flag no-verbosity-control
  Description: Disable the code that makes process execution less verbose
  Default: False
  Manual: True

flag fixed-verbosity-level
  Description: Disable the code that allows the verbosity level to change during execution
  Default: True
  Manual: True

flag listlike
  Description: Use process-listlike package instead of process-extras
  Default: False

Library
  Buildable: True
  Hs-Source-Dirs: .
  ghc-options: -O2 -Wall -Wredundant-constraints -fprint-potential-instances

  if flag(no-verbosity-control)
    cpp-options: -DNO_VERBOSITY_CONTROL

  if flag(fixed-verbosity-level)
    cpp-options: -DFIXED_VERBOSITY_LEVEL

  Build-Depends:
        applicative-extras,
        base,
        bytestring,
        bzlib,
        Cabal,
        containers,
        deepseq,
        directory,
        exceptions >= 0.6,
        filepath,
        HaXml,
        lens,
        ListLike >= 4,
        MIME,
        mtl,
        network-uri,
        old-locale,
        old-time,
        parsec >= 3,
        pretty >= 1.1.2,
        process,
        pureMD5,
        regex-compat,
        regex-tdfa,
        SHA,
        syb,
        template-haskell,
        text,
        time,
        transformers,
        transformers-compat,
        unix,
        Unixutils >= 1.52.3,
        utf8-string,
        zlib
  Exposed-modules:
        Debian.Releases,
        Debian.Repo,
        Debian.Repo.AptImage,
        Debian.Repo.AptKey,
        Debian.Repo.Changes,
        Debian.Repo.Dependencies,
        Debian.Repo.EnvPath,
        Debian.Repo.Fingerprint,
        Debian.Repo.IO,
        Debian.Repo.LocalRepository,
        Debian.Repo.MonadApt,
        Debian.Repo.MonadOS,
        Debian.Repo.MonadRepos,
        Debian.Repo.Mount,
        Debian.Repo.OSImage,
        Debian.Repo.OSKey,
        Debian.Repo.Package,
        Debian.Repo.PackageID,
        Debian.Repo.PackageIndex,
        Debian.Repo.Prelude,
        Debian.Repo.Prelude.Bool,
        Debian.Repo.Prelude.GPGSign,
        Debian.Repo.Prelude.List,
        Debian.Repo.Prelude.Lock,
        Debian.Repo.Prelude.Misc,
        Debian.Repo.Prelude.Process,
        Debian.Repo.Prelude.SSH,
        Debian.Repo.Prelude.Time,
        Debian.Repo.Prelude.Verbosity,
        Debian.Repo.Release,
        Debian.Repo.RemoteRepository,
        Debian.Repo.Repo,
        Debian.Repo.Rsync,
        Debian.Repo.Slice,
        Debian.Repo.SourceTree,
        Debian.Repo.State.AptImage,
        Debian.Repo.State.OSImage,
        Debian.Repo.State.Package,
        Debian.Repo.State.PackageIndex,
        Debian.Repo.State.Release,
        Debian.Repo.State.Repository,
        Debian.Repo.State.Slice,
        Debian.Repo.Top,
        Debian.VersionPolicy

  if flag(listlike)
    Build-Depends: process-listlike >= 1.0
  else
    Build-Depends: process-extras >= 0.7

  Build-Depends: filemanip-extra

  if !flag(local-libraries)
    Build-Depends: cabal-debian >= 4.24, debian >= 3.92
  else
    Hs-Source-Dirs: ../debian-haskell,../cabal-debian/src
    Build-Depends: ansi-wl-pprint, data-default, Diff, hsemail, HUnit, memoize, newtype-generics,
                   optparse-applicative, QuickCheck, set-extra, th-lift, th-orphans
    Exposed-Modules:
        Debian.Apt.Index
        Debian.Apt.Methods
        Debian.Arch
        Debian.Changes
        Debian.Control
        Debian.Control.Builder
        Debian.Control.ByteString
        Debian.Control.Common
        Debian.Control.Policy
        Debian.Control.String
        Debian.Control.Text
        Debian.Control.TextLazy
        Debian.Loc
        Debian.Pretty
        Debian.Relation
        Debian.Relation.Common
        Debian.Relation.String
        Debian.Relation.Text
        Debian.Release
        Debian.Sources
        Debian.TH
        Debian.Time
        Debian.URI
        Debian.UTF8
        Debian.Version
        Debian.Version.Common
        Debian.Version.Internal
        Debian.Version.String
        Debian.Version.Text
    Exposed-Modules:
        Data.Maybe.Extended
        Debian.Debianize
        Debian.Debianize.BasicInfo
        Debian.Debianize.BinaryDebDescription
        Debian.Debianize.BuildDependencies
        Debian.Debianize.Bundled
        Debian.Debianize.CabalInfo
        Debian.Debianize.Changelog
        Debian.Debianize.CopyrightDescription
        Debian.Debianize.DebInfo
        Debian.Debianize.DebianName
        Debian.Debianize.Details
        Debian.Debianize.ExecAtoms
        Debian.Debianize.Files
        Debian.Debianize.Finalize
        Debian.Debianize.Goodies
        Debian.Debianize.InputCabal
        Debian.Debianize.InputDebian
        Debian.Debianize.Interspersed
        Debian.Debianize.Monad
        Debian.Debianize.Optparse
        Debian.Debianize.Output
        Debian.Debianize.Prelude
        Debian.Debianize.SourceDebDescription
        Debian.Debianize.VersionSplits
        Debian.GHC
        Debian.Orphans
        Debian.Policy
        Debian.Relation.ByteString
        Distribution.Version.Invert

Executable debian-versions
  Hs-Source-Dirs: demos
  Build-Depends: base, mtl, debian-repo
  Buildable: True
  Main-is: Versions.hs
  ghc-options: -O2 -threaded -Wall
  if !flag(local-libraries)
    Build-Depends: debian >= 3.92

Executable newdist
  Hs-Source-Dirs: Debian/NewDist
  Build-Depends: base, debian-repo, containers, directory, filepath, MIME, mtl, regex-compat, template-haskell, text
  Buildable: True
  Main-is: Main.hs
  ghc-options: -O2 -threaded -Wall -rtsopts
  Build-Depends: cabal-debian, lens
  Other-Modules:
        Config Options Version Paths_debian_repo
  if !flag(local-libraries)
    Build-Depends: debian >= 3.92
